# Document-Processing-Automation

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
demo/: __init__.py  app.py  requirements.txt
scripts/: evaluate.py  quickstart.py  run_demo.py
src/: __init__.py
src/data/: __init__.py  data_generator.py  data_loader.py  schema.py
src/eval/: __init__.py  benchmark.py  evaluator.py  metrics.py
src/models/: __init__.py  confidence_estimator.py  document_classifier.py  field_extractor.py
src/processing/: __init__.py  document_processor.py  layout_parser.py  ocr_processor.py
src/viz/: __init__.py  dashboard.py  explainability.py  visualizer.py
tests/: __init__.py  conftest.py
tests/unit/: test_document_processor.py
